--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.9",
     "@astrojs/check": "^0.5.9",
-    "typescript": "^5.4.3"
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.4.0",
+    "@astrojs/vue": "^4.0.9",
+    "astro": "^4.5.9",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.3",
+    "vue": "^3.4.21"
   }
 }
